--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHousekeepingStorage.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHousekeepingStorage.cshtml
@@ -57,6 +57,7 @@
             </div>
             <div class="row-fluid">
                 <div class="span10">
+                    <p>Use the shift key to select multiple files</p>
                 </div>
                 <div class="span2">
                     <a class="btn btn-block btn-red" id="btn-deletefile" href=""><i class="icon-trash"> Delete</i></a>
@@ -77,7 +78,7 @@
 
     $('#jstree').jstree({
         "core": {
-            "multiple": false,
+            "multiple": true,
             "animation": 0,
             "check_callback": true,
         }
