--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHousekeepingStorage.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHousekeepingStorage.cshtml
@@ -56,11 +56,17 @@
                 <textarea id="Logging" spellcheck="false" rows="3" class="input-block-level" wrap="off" style="margin: 0px; height: 450px;"></textarea>
             </div>
             <div class="row-fluid">
-                <div class="span10">
+                <div class="span6">
                     <p>Use the shift key to select multiple files</p>
                 </div>
                 <div class="span2">
-                    <a class="btn btn-block btn-red" id="btn-deletefile" href=""><i class="icon-trash"> Delete</i></a>
+                    <a class="btn btn-block btn-blue" id="btn-viewfile"><i class="icon-search"> View</i></a>
+                </div>
+                <div class="span2">
+                    <a class="btn btn-block btn-blue" id="btn-downloadfile"><i class="icon-download-alt"> Download</i></a>
+                </div>
+                <div class="span2">
+                    <a class="btn btn-block btn-red" id="btn-deletefile"><i class="icon-trash"> Delete</i></a>
                 </div>
             </div>
         </div>
@@ -84,67 +90,91 @@
         }
     });
 
-    var NodeSelected
+    var NodesSelected
 
     $('#jstree').on("changed.jstree", function (e, data) {
-        var SelectedFile = $('#' + data.selected[0]);
+        NodesSelected = data.selected;
+
+        var SelectedFile = $('#' + NodesSelected[0]);
         var APIUrl = SelectedFile.attr("data-multiplugapi");
 
         if (typeof APIUrl !== 'undefined' && APIUrl !== false) {
+            $('#FileNameHeading').text("File: " + SelectedFile.attr("data-filename"));
+            $("#btn-downloadfile").removeAttr('href');
+            $('#btn-downloadfile').attr('download', SelectedFile.attr("data-filename"));
+            $('#Logging').val('');
+        }
+    });
 
-            NodeSelected = data.selected[0];
+    function GetUrl( Selected )
+    {
+        var SelectedFile = $('#' + Selected);
+        var APIUrl = SelectedFile.attr("data-multiplugapi");
 
+        if (typeof APIUrl !== 'undefined' && APIUrl !== false) {
             var FileName = SelectedFile.attr("data-filename");
             var ExtensionName = SelectedFile.attr("data-extension");
-
-            $('#FileNameHeading').text(FileName);
-
-            if (ExtensionName)
-            {
-                $("#btn-deletefile").attr('href', 'multiplug/housekeeping/files/extensions/' + ExtensionName + '/delete/' + FileName);
+            if (ExtensionName) {
+                return 'multiplug/housekeeping/files/extensions/' + ExtensionName + '/delete/' + FileName;
             }
-            else
-            {
-                $("#btn-deletefile").attr('href', 'multiplug/housekeeping/files/system/delete/' + FileName);
+            else {
+                return 'multiplug/housekeeping/files/system/delete/' + FileName;
             }
-
-            $('#Logging').val('Loading File');
-
-            $.get(APIUrl, function (data) {
-
-            })
-            .done(function (data) {
-                var LoggingBox = $('#Logging');
-                var builder = [];
-                data.forEach(function (line) {
-                    builder.push(line);
-                    builder.push("\n");
-                });
-                LoggingBox.val('');
-                LoggingBox.val(builder.join(''));
-                scrollLogToBottom('Logging');
-            });
         }
+
+        return '';
+    }
+
+    $("#btn-viewfile").click(function (event) {
+        event.preventDefault();
+
+        if (NodesSelected == null || NodesSelected.length == 0) {
+            return;
+        }
+
+        $('#Logging').val('Loading File...');
+
+        $.get($('#' + NodesSelected[0]).attr("data-multiplugapi"), function (data) {
+
+        })
+        .done(function (data) {
+            var LoggingBox = $('#Logging');
+            var builder = [];
+            data.forEach(function (line) {
+                builder.push(line);
+                builder.push("\n");
+            });
+            LoggingBox.val('');
+            var LogContents = builder.join('');
+            LoggingBox.val(LogContents);
+            $('#btn-downloadfile').attr('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(LogContents));
+            scrollLogToBottom('Logging');
+        });
     });
 
     $("#btn-deletefile").click(function (event) {
         event.preventDefault();
 
-        if ($(this).attr('href') == "")
-        {
+        if (NodesSelected == null || NodesSelected.length == 0) {
             return;
         }
 
-        $.post($(this).attr('href'), function (data) {
+        var NodesSelectedSnapshot = NodesSelected; // Will change on Delete
 
-        })
-        .done(function (data) {
+        for (let i = 0; i < NodesSelectedSnapshot.length; i++) {
+            $.ajax({
+                type: 'POST',
+                url: GetUrl(NodesSelectedSnapshot[i]),
+                async: false
+            });
+            $("#jstree").jstree(true).delete_node(NodesSelectedSnapshot[i]);
+        }
 
-            $("#jstree").jstree(true).delete_node(NodeSelected);
+        NodesSelected = null;
 
-            $('#Logging').val('');
-            $("#btn-deletefile").attr('href', '');
-            $('#FileNameHeading').text("File:");
-        });
+        $("#btn-downloadfile").removeAttr('href');
+        $("#btn-downloadfile").removeAttr('download');
+        $('#FileNameHeading').text("File:");
+        $('#Logging').val('');
     });
 </script>
